landing-zone/landing-zone/policies/deletion-policy-required-template.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata: # kpt-merge: /gcprequiredeletionpolicy
  name: gcprequiredeletionpolicy
  annotations:
    internal.kpt.dev/upstream-identifier: 'templates.gatekeeper.sh|ConstraintTemplate|default|gcprequiredeletionpolicy'
spec:
  crd:
    spec:
      names:
        kind: GCPRequireDeletionPolicy
      validation:
        openAPIV3Schema:
          properties:
  targets:
    - rego: |
        package templates.gcp.GCPRequireDeletionPolicyConstraint

        violation[{"msg": msg}] {
          kind := input.review.object.kind
          not input.review.object.metadata.annotations["cnrm.cloud.google.com/deletion-policy"] == "abandon"
          msg := "Annotation cnrm.cloud.google.com/deletion-policy must be present and set to abandon"
        }
      target: admission.k8s.gatekeeper.sh
status: {}
